tests/valid/ifstatements.nim
let a = 0

if a == 1:
  echo "equal"
else:
  echo "not equal"
