tests/invalid/ifmaxstatements.nim
# Count: 0
# Negative count: 1

let a = 0

if a == 0:
  echo "zero"
elif a == 1:
  echo "one"
elif a == 2:
  echo "two"
else:
  echo "more"
